# What-Command

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  DESIGN.md  Plan.md  README.md  eslint.config.js  package.json  rust-toolchain.toml  skills-lock.json
.agents/skills/tauri-pro/: SKILL.md
.cargo/: config.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: build-android.yml  build-desktop.yml  ci.yml  db-update.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: CommandCard.vue  SearchBar.vue  SettingsForm.vue  TerminalEmulator.vue
apps/desktop/src/composables/: useLayout.ts  useTauri.ts
apps/desktop/src/layouts/: DesktopShell.vue  MobileTabShell.vue
apps/desktop/src/router/: index.ts
apps/desktop/src/stores/: ai.ts  commands.ts  playground.ts  research.ts  settings.ts
apps/desktop/src/types/: index.ts
apps/desktop/src/views/: AiChatView.vue  BrowseView.vue  MoreView.vue  PlaygroundView.vue  ResearchView.vue
crates/wc-ai/: Cargo.toml
crates/wc-ai/src/: lib.rs  local_engine.rs  openai_compat.rs  router.rs
crates/wc-ai/src/providers/: kilo_gateway.rs  local_llm.rs  mod.rs  openai_compat_provider.rs  opencode_zen.rs
crates/wc-cli/: Cargo.toml
crates/wc-cli/src/: main.rs
crates/wc-core/: Cargo.toml
crates/wc-core/src/: config.rs  db.rs  error.rs  lib.rs  models.rs  simulator.rs
scripts/: android-compat-check.mjs  patch-android-abi.mjs  tauri-hook.mjs
scripts/db-updater/: fetch-tldr.ts  index.ts  package.json  parse-tldr.ts
