[package]
name = "wc-core"
description = "What Command core: SQLite command DB, simulator, settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
dirs.workspace = true
toml.workspace = true
uuid.workspace = true
