[package]
name = "desktop"
version.workspace = true
description = "What Command desktop and Android shell"
authors = ["involvex"]
edition.workspace = true
license.workspace = true

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
local-llm = ["wc-ai/local-llm"]

[dependencies]
wc-core = { path = "../../../crates/wc-core" }
wc-ai = { path = "../../../crates/wc-ai" }
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid.workspace = true
